added ability to sort Units in the List

--- a/Unit.cls
+++ b/Unit.cls
@@ -1,4 +1,4 @@
-public class Unit {
+public class Unit implements Comparable{
     private String name;
     private Integer healthPoint;
     private Integer damageMin;
@@ -41,5 +41,27 @@ public class Unit {
 
     public void setDamageMax(Integer damageMax) {
         this.damageMax = damageMax;
+    }
+    
+    public Integer compareTo(Object o) {
+        Unit compareToUnit = (Unit)o;
+
+        Integer returnValue = name.compareTo(compareToUnit.getName());
+
+        if (returnValue == 0){
+            if (healthPoint>compareToUnit.getHealthPoint()){
+                 returnValue = 1;
+            } else if (healthPoint<compareToUnit.getHealthPoint()){
+                returnValue = -1;
+            }
+        }
+        return returnValue;
+    }
+    
+    public override String toString() {
+        return 'Unit{' +
+                'name="' + name + '\"' +
+                ', healthPoint=' + healthPoint +
+                '}';
     }
 }
